--- a/settings_profile.json
+++ b/settings_profile.json
@@ -50,7 +50,7 @@
   "PTT Timeout": {
     "uv5r": {
       "name": "timeout",
-      "value": 30
+      "value": "30 sec"
     }
   },
   "Display mode A": {
